add database name to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/project
+spring.datasource.url=jdbc:postgresql://localhost:5432/hsp
 spring.datasource.username=postgres
 spring.datasource.password=Aliii09124169320
 spring.jpa.hibernate.ddl-auto=update
