--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+logging.level.org.springframework.web=DEBUG
+
 
