--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-server.error.include-message=always
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 logging.level.org.springframework.web=DEBUG
 
 
+
+spring.mail.host=smtp.mailgun.org
+spring.mail.port=587
+spring.mail.username=postmaster@sandbox46788d8a61f249acb288b2ca69952b92.mailgun.org
+spring.mail.password=a38f1d465f86798db10a69a5cc3e9269-4c2b2223-63958d1a
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
